# rhcr

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  main.out  makefile
Assets/Materials/Colors/: matBlack.mat  matGreen.mat  matYellow.mat
Assets/Prefabs/: IgnoreRaycastWall.prefab  InvisibleWall.prefab
Assets/Prefabs/Main/: EmptyVisualizationSuite.prefab  RemoteHapticControlRobot.prefab  World.prefab
Assets/Prefabs/Mockup/: MockupFalcon.prefab  MockupRobot.prefab
Assets/RenderTextures/: CompressedImageRenderTexture.asset
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/Scenes/: Main.unity  Mockup.unity
Assets/Scripts/: RemoteHapticControlRobot.cs
Assets/Scripts/Cam/: VirtualCamera.cs
Assets/Scripts/Middlewares/: FalconMiddleware.cs
Assets/Scripts/Mockups/: FalconMockup.cs
Assets/Scripts/RoboticsCore/: Clock.cs  TimeStamp.cs  Transformations.cs
Assets/XR/: XRGeneralSettings.asset
Documentation/: ros2-humble-windows.md
ProjectSettings/: EditorBuildSettings.asset  TagManager.asset
dockerfiles/: README.md  falcon-dockerfile
dockerfiles/breno/: Dockerfile
dockerfiles/rhcr/: package.xml
dockerfiles/rhcr-falcon/: docker-install.sh  docker-run.sh  docker-setup.sh
dockerfiles/rhcr-falcon/rhcr/: CMakeLists.txt  package.xml
dockerfiles/rhcr-falcon/rhcr/src/: main.cpp
dockerfiles/ros1-wheeltec/: Dockerfile
dockerfiles/ros2-falcon/: Dockerfile
dockerfiles/ros2-falcon/ros-package/: package.xml
include/: myFalcon.h
rhcc-ros/: .gitignore
rhcc-ros-2/src/rhcc/: CMakeLists.txt  package.xml
rhcc-ros-package/: CMakeLists.txt  package.xml
rhcc-ros-package/src/: turtlesim.cpp
rhcc-ros-package/udev_rules/: 99-udev-novint.rules
rhcc-ros/src/rhcc/: CMakeLists.txt
rhcc-ros/src/rhcc/include/: falcon.h  node.h
rhcc-ros/src/rhcc/msg/: output.msg
rhcc-ros/src/rhcc/src/: falcon.cpp  main.cpp  node.cpp  turtlesim.cpp
rhcc-unity/: .gitignore
rhcc-unity-project/Assets/Materials/: matWheels.mat
rhcc-unity-project/Assets/Scripts/: InputManager.cs
rhcc-unity/Assets/Materials/: matChassis.mat  matChassis2.mat  matFloor.mat
rhcc-unity/Assets/Prefabs/: Ackermann.prefab  Camera.prefab  RosHolder.prefab
rhcc-unity/Assets/Scenes/: Main.unity
rhcc-unity/Assets/Scripts/: CarController.cs  InputManager.cs  RosCenterButtonSubscriber.cs  RosForceVectorPublisher.cs
rhcr-rviz-plugins/: package.xml  plugins_description.xml
rhcr-rviz-plugins/src/: delete_object_tool.cpp
rhcr-slam-nav2/config/: slam.config.rviz
rhcr-slam-nav2/launch/: start-slam-only.launch.py  start.launch.py
ros-package/: .gitignore  CMakeLists.txt  package.xml
ros-package/src/: falcon.cpp  main.cpp
ros2-falcon/: Dockerfile
ros2-falcon/ros-package/: CMakeLists.txt
ros2-falcon/ros-package/include/: falcon_node.hpp
ros2-falcon/ros-package/src/: falcon.cpp  falcon_node.cpp  main.cpp
ros2-package/: Dockerfile
ros2-package/falcon-ros/: CMakeLists.txt  package.xml
ros2-package/falcon-ros/src/: main.cpp
ros2-packages/config/: rviz.config.rviz  slam-nav2.config.rviz  slam.config.rviz
ros2-packages/rhcr-falcon/: Dockerfile  docker-setup.sh
ros2-packages/rhcr-rviz-plugins/: CMakeLists.txt  package.xml  plugins_description.xml
ros2-packages/rhcr-rviz-plugins/config/: nav2.config.rviz  slam.config.rviz
ros2-packages/rhcr-rviz-plugins/include/: create_object_tool.hpp
ros2-packages/rhcr-rviz-plugins/src/: create_object_tool.cpp  delete_all_objects_tool.cpp
ros2-packages/rhcr-slam-nav2/: package.xml
ros2-packages/rhcr-slam-nav2/config/: nav2.config.yaml  slam.config.yaml
ros2-packages/rhcr-slam-nav2/launch/: start-slam-only.launch.py  start.launch.py
ros2-packages/rhcr-workspace/: install-dependencies.sh
ros2-packages/rhcr-workspace/src/rhcr-slam-nav2/: CMakeLists.txt
ros2-packages/rhcr-workspace/src/rhcr-slam-nav2/config/: nav2.config.rviz
ros2-packages/rhcr-workspace/src/rhcr-slam-nav2/launch/: start-slam-only.launch.py
ros2-packages/rhcr-workspace/src/rhcr-slam-nav2/src/: minimap_publisher.cpp
ros2-packages/ros2-ackermann/: CMakeLists.txt  package.xml
ros2-packages/ros2-ackermann/config/: nav2.config.yaml  rviz.config.rviz  slam_toolbox.config.yaml
ros2-packages/ros2-ackermann/launch/: display.launch.py  start-navigation.launch.py
ros2-packages/ros2-ackermann/rviz/: nav_config.rviz  urdf_config.rviz
ros2-packages/ros2-ackermann/src/: ackermann_tf2_broadcaster.cpp
ros2-packages/ros2-ackermann/src/description/: ackermann_description.urdf  simulated_ackermann_description.urdf
ros2-packages/ros2-falcon/: CMakeLists.txt  Dockerfile  package.xml
ros2-packages/ros2-falcon/include/: falcon_node.hpp
ros2-packages/ros2-falcon/ros2-falcon/include/: falcon.hpp
ros2-packages/ros2-falcon/src/: falcon.cpp  falcon_node.cpp  main.cpp
ros2-packages/ros2-navigation/ros2-package/: .gitignore
ros2-packages/ros2-navigation/temp/: package.xml  top_akm_dl_robot.urdf
ros2-packages/ros2-slam/: Dockerfile
ros2-packages/ros2-slam-nav2/: Dockerfile
ros2-packages/ros2-slam-nav2/ros2-slam-nav2/: CMakeLists.txt  package.xml
ros2-packages/ros2-slam-nav2/ros2-slam-nav2/launch/: slam-nav2.launch.py  slam.launch.py
ros2-packages/ros2-slam-nav2/ros2-slam-nav2/src/: ackermann_tf2_broadcaster.cpp
ros2-packages/ros2-slam-nav2/ros2-slam-nav2/src/description/: ackermann_description.urdf
ros2-packages/ros2-slam/ros2-slam/: CMakeLists.txt  install-dependencies.sh  package.xml
scripts/: Bridge-WslPorts.ps1  docker-install.sh
src/: main.cpp  myFalcon.cpp
unity-project/: .gitignore
unity-project/Assets/Materials/: matSensors.mat
unity-project/Assets/Prefabs/: Ackermann.prefab  AckermannModel.prefab  Barrier.prefab  Falcon.prefab  InvisibleWall.prefab  RemoteHapticControlRobot.prefab  Ros1Holder.prefab  Ros2Holder.prefab  Wall.prefab  WallNoRaycast.prefab  World.prefab
unity-project/Assets/Resources/: ROSConnectionPrefab.prefab
unity-project/Assets/Scenes/: Main.unity  Mockup.unity  MockupMain.unity  Test.unity  Test2.unity
unity-project/ProjectSettings/: ProjectSettings.asset
(+107 files in other folders)
