<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2-falcon</name>
    <version>1.1.0</version>
    <description>ROS2 Novint Falcon Package</description>
    <maintainer email="jv.moraiscb@gmail.com">João Victor Morais</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
