<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2-slam-nav2</name>
    <version>1.0.0</version>
    <description>ROS2 SLAM and Nav2 Package</description>
    <maintainer email="jv.moraiscb@gmail.com">jvmoraiscb</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>xacro</exec_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
